fix: made fonts more readable

--- a/src/components/Body/Right/Right.scss
+++ b/src/components/Body/Right/Right.scss
@@ -12,7 +12,7 @@
         
         h1{
             font-size: 2.2rem;
-            font-family: "Tailwind";
+            font-family: "Josefin Slab";
             font-weight: bold;
         }
 
@@ -33,7 +33,7 @@
             }
 
             h1{
-                font-weight: normal;
+                font-weight: bold;
                 font-size: 2rem;
             }
         }
